# RustBotServer

./: .gitignore  Cargo.toml  README.md  api.json  deploy.sh  infra.sh  install.sh  lib.rs  prompt.md  run_tests.sh  setupk.sh
.forgejo/workflows/: node.yaml
gb-api/: Cargo.toml
gb-api/src/: lib.rs  main.rs  router.rs
gb-auth/: Cargo.toml
gb-auth/config/: auth_config.yaml
gb-auth/migrations/: 20231201000000_create_auth_tables.sql
gb-auth/src/: error.rs  errors.rs  lib.rs
gb-auth/src/handlers/: auth_handler.rs  mod.rs
gb-auth/src/middleware/: auth_middleware.rs
gb-auth/src/models/: auth.rs  mod.rs  user.rs
gb-auth/src/services/: auth_service.rs
gb-auth/src/utils/: mod.rs
gb-auth/tests/: auth_service_tests.rs
gb-automation/: Cargo.toml
gb-automation/src/: lib.rs  process.rs  web.rs
gb-calendar/: Cargo.toml
gb-cloud/: Cargo.toml
gb-core/: Cargo.toml
gb-core/src/: config.rs  db.rs  errors.rs  lib.rs  models.rs  traits.rs  utils.rs
gb-document/: Cargo.toml
gb-document/src/: excel.rs  pdf.rs  word.rs
gb-file/: Cargo.toml
gb-file/src/: db.rs  facade.rs  handlers.rs  lib.rs
gb-image/: Cargo.toml
gb-image/src/: build.rs  converter.rs  lib.rs  processor.rs
gb-infra/: Cargo.toml  README.md  architecture.txt
gb-infra/src/: lib.rs  manager.rs  setup.rs
gb-infra/src/scripts/: alm-ci.sh  alm.sh  drive.sh  email.sh  limits.sh  meeting.sh  proxy.sh  tables.sh  webmail.sh
gb-infra/src/services/: minio.rs  nginx.rs  postgresql.rs  stalwart.rs  zitadel.rs
gb-infra/src/templates/opt/gbo/tenants/default/alm-ci/: alm-ci.sh
gb-infra/src/templates/opt/gbo/tenants/default/bot/: bot.sh
gb-infra/src/templates/opt/gbo/tenants/default/directory/: directory.sh
gb-infra/src/templates/opt/gbo/tenants/default/email/: email.sh
gb-infra/src/templates/opt/gbo/tenants/default/proxy/: proxy.sh
gb-infra/src/templates/opt/gbo/tenants/default/shared/scripts/: check-space.sh  limits.sh  set-size-5GB.sh  startup.sh
gb-infra/src/templates/opt/gbo/tenants/default/table-editor/: table-editor.sh
gb-llm/: Cargo.toml
gb-llm/prompts/: send-proposal.txt
gb-media/: Cargo.toml
gb-media/src/: audio.rs  lib.rs  processor.rs  webrtc.rs
gb-messaging/: Cargo.toml
gb-messaging/gb-migrations/src/: lib.rs
gb-messaging/src/: broker.rs  kafka.rs  lib.rs  models.rs  processor.rs  rabbitmq.rs  redis_pubsub.rs  websocket.rs
gb-migrations/: 20231220000000_update_user_schema.sql  Cargo.toml
gb-migrations/src/: lib.rs
gb-monitoring/: Cargo.toml
gb-monitoring/src/: lib.rs  logging.rs  metrics.rs  telemetry.rs
gb-nlp/: Cargo.toml
gb-nlp/src/: lang.rs  lib.rs  text.rs
gb-server/: Cargo.toml
gb-server/src/: main.rs  router.rs  utils.rs
gb-storage/: Cargo.toml
gb-storage/src/: lib.rs  models.rs  postgres.rs  redis.rs  tikv.rs
gb-testing/: Cargo.toml  README.md  run_tests.sh
gb-testing/config/: test_config.yaml
gb-testing/src/: lib.rs
gb-testing/src/chaos/: mod.rs
gb-testing/src/integration/: mod.rs
gb-testing/src/load/: mod.rs
gb-testing/src/metrics/: mod.rs
gb-testing/src/performance/: mod.rs
gb-testing/src/reports/: mod.rs
gb-testing/src/scenarios/: mod.rs
gb-testing/src/stress/: mod.rs
gb-testing/src/utils/: mod.rs
gb-testing/tests/: chaos_kubernetes_test.rs  file_upload_test.rs  integration_file_list_test.rs  integration_file_upload_test.rs  load_auth_test.rs  performance_api_bench.rs
gb-testing/tests/chaos/: kubernetes_test.rs
gb-testing/tests/integration/: api_test.rs
gb-testing/tests/load/: auth_test.rs
gb-testing/tests/performance/: api_bench.rs
gb-testing/tests/stress/: system_test.rs
gb-utils/: Cargo.toml
gb-utils/src/: detector.rs  lib.rs  processor.rs
gb-vm/: Cargo.toml
gb-vm/src/: router.rs
k8s/base/: api.yaml  document.yaml  image.yaml  ingress.yaml  kafka.yaml  kustomization.yaml  messaging.yaml  monitoring.yaml  namespace.yaml  nlp.yaml  postgres.yaml  redis.yaml  webrtc.yaml
migrations/: 20231220000000_update_auth_schema.sql  20231220000001_add_role_to_users.sql  20231220000002_update_users_schema.sql  20231220000003_update_customers_schema.sql
src/: lib.rs  main.rs  models.rs  services.rs
src/models/: automation_model.rs  bot_model.rs
src/prompts/business/: data-enrichment.bas  on-emulator-sent.bas  send-proposal.bas
src/scripts/: set-size-5GB.sh
src/scripts/containers/: alm-ci.sh  bot.sh  cleaner.sh  dns.sh  email.sh  llm.sh  set-limits.sh  system.sh
src/scripts/database/: 0002.sql
src/scripts/utils/: set-limits.sh  set-size-5GB.sh
src/services/: automation.rs  bot.md  config.rs  email.rs  file.rs  find.md  find.rs  llm-email.md  llm.rs  llm_local.rs  llm_provider.rs  script.rs  state.rs  utils.rs  web_automation.rs
src/services/keywords/: create_draft.rs  create_site.rs  find.rs  first.rs  for_next.rs  get.rs  get_website.rs  llm_keyword.rs  mod.rs  on.rs  print.rs  prompt.md  set.rs  set_schedule.rs  wait.rs
src/templates/containers/desktop/: desktop.sh
src/templates/containers/proxy/: proxy.sh
src/templates/containers/system/: system.sh
src/templates/opt/gbo/tenants/default/alm-ci/: alm-ci.sh
src/templates/opt/gbo/tenants/default/desktop/: desktop.sh
src/templates/opt/gbo/tenants/default/doc-editor/: doc-editor.sh
src/templates/opt/gbo/tenants/default/system/: system.sh
src/tests/: integration_file_list_test.rs
