[package]
name = "gbserver"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Rodriguez <me@rodrigorodriguez.com>"]
description = "General Bots Server"
license = "AGPL"
repository = "https://alm.pragmatismo.com.br/generalbots/gbserver"

[dependencies]
actix-multipart = "0.6"
actix-web = "4"
dotenv = "0.15"
jmap-client = "0.3.2"
log = "0.4"
minio = { git = "https://github.com/minio/minio-rs", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }