[package]
name = "gbserver"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Rodriguez <me@rodrigorodriguez.com>"]
description = "General Bots Server"
license = "AGPL"
repository = "https://alm.pragmatismo.com.br/generalbots/gbserver"

[dependencies]
actix-cors = "0.6"
actix-multipart = "0.6"
actix-web = "4"
actix-ws="0.3.0"
bytes = "1.1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }

chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
imap = "2.0"
lettre = { version = "0.10", features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }
log = "0.4"
mailparse = "0.13"
minio = { git = "https://github.com/minio/minio-rs", branch = "master" }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
langchain-rust = "4.4.3"
async-stream = "0.3"

