[package]
name = "gbserver"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Rodriguez <me@rodrigorodriguez.com>"]
description = "General Bots Server"
license = "AGPL"
repository = "https://alm.pragmatismo.com.br/generalbots/gbserver"

[features]
default = []
local_llm = []

[dependencies]
actix-cors = "0.6"
actix-multipart = "0.6"
actix-web = "4"
actix-ws = "0.3.0"
thirtyfour = { version = "0.30" }
downloader = "0.2.8"
anyhow = "1.0"
async-stream = "0.3"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
imap = "2.0"
langchain-rust = "4.4.3"
lettre = { version = "0.10", features = [
    "smtp-transport",
    "builder",
    "tokio1",
    "tokio1-native-tls",
] }
log = "0.4"
mailparse = "0.13"
minio = { git = "https://github.com/minio/minio-rs", branch = "master" }
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
rhai = "1.22.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartstring = "1.0" # Use the latest version from crates.io
sqlx = { version = "0.7", features = [
    "time",
    "uuid",
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
scraper = "0.18"
urlencoding = "2.1"
regex = "1.10"
uuid = { version = "1.4", features = ["serde", "v4"] } # v4, v7, etc. as needed
zip = "4.3.0"
