[package]
name = "gb-api"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gb-core = { path = "../gb-core" }
gb-messaging = { path = "../gb-messaging" }
gb-monitoring = { path = "../gb-monitoring" }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }  # Add these features
axum = { version = "0.7.9", features = ["ws", "multipart", "macros"] }
tower= { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde= { workspace = true }
serde_json= { workspace = true }
uuid= { workspace = true }
tracing= { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait= { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
chrono = { workspace = true, features = ["serde"] }
tokio-stream = "0.1.17"

[dev-dependencies]
rstest= { workspace = true }
tokio-test = "0.4"
