[package]
name = "gb-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = { version = "0.8", features = ["std"] }
oauth2 = "4.4"
openid = "0.12"
tokio-openssl = "0.6"
ring = "0.17"

# Async Runtime
tokio.workspace = true
async-trait.workspace = true


# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Logging & Metrics
tracing.workspace = true

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }

# Web Framework
axum = { version = "0.7.9" }
axum-extra = { version = "0.7" }  # Add headers feature
tower = "0.4"
tower-http = { version = "0.5", features = ["auth", "cors", "trace"] }
headers = "0.3"

[dev-dependencies]
rstest = "0.18"
tokio-test = "0.4"
mockall = "0.12"
axum-extra = { version = "0.7" }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
