[package]
name = "gb-automation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
regex = "1.10"
fantoccini = "0.19"
headless_chrome = "1.0"
async-recursion = "1.0"

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"
mock_instant = "0.2"
