[package]
name = "gb-cloud"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gb-core = { path = "../gb-core" }
async-trait= { workspace = true }
tokio= { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror= { workspace = true }
tracing= { workspace = true }

[dev-dependencies]
rstest= { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"
