[package]
name = "gb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio-tungstenite = "0.18"
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
sqlx.workspace = true
redis.workspace = true
tracing.workspace = true
axum = { version = "0.7", features = ["json"] }
serde_json = "1.0"

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
tokio-test = "0.4"
