[package]
name = "gb-document"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
lopdf = "0.31"
docx-rs = "0.4"
calamine = "0.21"
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
encoding_rs = "0.8"
zip = "0.6"

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"
tempfile = "3.8"
