[package]
name = "gb-file"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gb-core = { path = "../gb-core" }
async-trait= { workspace = true }
tokio= { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json ={ workspace = true }
thiserror= { workspace = true }
tracing= { workspace = true }
minio =  { workspace = true }
actix-web ={ workspace = true }
[dev-dependencies]
rstest= { workspace = true }
tokio-test = "0.4"
tempfile = "3.8"
