[package]
name = "gb-llm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gb-core = { path = "../gb-core" }
async-trait= { workspace = true }
tokio= { workspace = true }
thiserror= { workspace = true }
tracing= { workspace = true }

[dev-dependencies]
rstest= { workspace = true }
