[package]
name = "gb-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
tokio.workspace = true
webrtc.workspace = true
gstreamer.workspace = true
opus.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true

[dev-dependencies]
rstest.workspace = true
mockall.workspace = true
tokio-test = "0.4"
