[package]
name = "gb-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
tokio.workspace = true
rdkafka.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
lapin = "2.3"

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"
