[package]
name = "gb-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
tokio.workspace = true
rdkafka.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
lapin = "2.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"