[package]
name = "gb-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"
