[package]
name = "gb-monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12", features = ["tonic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
thiserror = "1.0"
prometheus = "0.13"
gb-core = { path = "../gb-core" }
lazy_static = "1.4"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio-test = "0.4"
