[package]
name = "gb-monitoring"
version= { workspace = true }
edition= { workspace = true }

[dependencies]
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12", features = ["tonic"] }
tracing= { workspace = true }
tracing-subscriber= { workspace = true }
thiserror= { workspace = true }
prometheus= { workspace = true }
gb-core = { path = "../gb-core" }
lazy_static = "1.4"
tokio= { workspace = true }
serde= { workspace = true }
serde_json= { workspace = true }

[dev-dependencies]
rstest= { workspace = true }
tokio-test = "0.4"