[package]
name = "gb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gb-core = { path = "../gb-core" }
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
tikv-client.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
rstest.workspace = true
mockall.workspace = true
tokio-test = "0.4"
