[package]
name = "gb-testing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
gb-core = { path = "../gb-core" }
gb-auth = { path = "../gb-auth" }
gb-server = { path = "../gb-server" }

anyhow = { workspace = true }
# Testing frameworks
goose = "0.17"  # Load testing
criterion = { workspace = true, features = ["async_futures"] }

# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP Client
reqwest = { workspace = true, features = ["json", "stream"] }
hyper = { workspace = true, features = ["full"] }

# WebSocket Testing
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Metrics & Monitoring
prometheus = { workspace = true, features = ["process"] }
tracing = { workspace = true }
opentelemetry = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
futures = { workspace = true }
rand = { workspace = true }
fake = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
rstest = { workspace = true }
wiremock = "0.5"
assert_cmd = "2.0"
predicates = "3.0"
